apps-template/overlays/prod/xperience-climb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xperience-climb-svc
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: xperience-climb
