apps-template/overlays/prod/xperience-climb/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: xperience-climb-route
  namespace: apps
spec:
  parentRefs:
    - name: main-aws-alb-gateway
      namespace: kube-system
  hostnames:
    - "xperience.suaempresa.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: xperience-climb-svc
          port: 80
